--- a/src/components/Select/Select.module.css
+++ b/src/components/Select/Select.module.css
@@ -16,6 +16,7 @@
  */
 .select__overline {
   display: flex;
+  align-items: center;
   margin-bottom: calc(var(--eds-spacing-size-half) / 16 * 1rem);
   gap: calc(var(--eds-spacing-size-half) / 16 * 1rem);
 }
